force-app/main/default/objects/OpportunityLineItem/fields/Display_On_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Display_On_Opportunity__c</fullName>
    <formula>PricebookEntry.Product2.Product_Tracking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display On Opportunity</label>
    <type>Checkbox</type>
</CustomField>