force-app/main/default/objects/OpportunityLineItem/fields/Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_ID__c</fullName>
    <description>MIS-7517</description>
    <formula>CASESAFEID( PricebookEntryId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Entry ID</label>
    <type>Text</type>
</CustomField>