force-app/main/default/objects/OpportunityLineItem/fields/Product_AddOnType__c.field-meta.xml
<CustomField>
    <fullName>Product_AddOnType__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.AddOnType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product AddOnType</label>
    <type>Text</type>
</CustomField>