force-app/main/default/objects/OpportunityLineItem/fields/Product_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Product_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Tracking</label>
    <type>Checkbox</type>
</CustomField>