force-app/main/default/objects/OpportunityLineItem/fields/Purchase_Motion__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Motion__c</fullName>
    <label>Purchase Motion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Package Upgrade</fullName>
            </value>
            <value>
                <fullName>Price Increase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>